@@ -1,0 +1,8 @@
+from django.forms.util import ValidationError
+from django.forms.widgets import *
+from django.forms.fields import *
+from django.forms.forms import *
+from django.forms.models import *
+
+from geoportal.forms.fields import *
+from geoportal.forms.widgets import *
