@@ -1,0 +1,204 @@
+<div id="{{ map_var }}_map" style="width: {{ width }}px; height: {{ height }}px;"></div>
+
+<script type="text/javascript">
+	var {{ map_var }} = {};
+	{{ map_var }}.viewer = null;
+	{{ map_var }}.re = new RegExp("^SRID=\d+;(.+)", "i");
+	{{ map_var }}.layers = {};
+	{{ map_var }}.wkt_f = new OpenLayers.Format.WKT();
+	{{ map_var }}.is_collection = {{ is_collection|yesno:"true,false" }};
+	{{ map_var }}.collection_type = '{{ collection_type }}';
+	{{ map_var }}.is_linestring = {{ is_linestring|yesno:"true,false" }};
+	{{ map_var }}.is_polygon = {{ is_polygon|yesno:"true,false" }};
+	{{ map_var }}.is_point = {{ is_point|yesno:"true,false" }};
+
+	{{ map_var }}.get_ewkt = function(feat){return 'SRID={{ srid }};' + {{ map_var }}.wkt_f.write(feat);}
+
+	{{ map_var }}.read_wkt = function(wkt){
+		var srids = wkt.split(';', 2);
+		if (srids.length == 2) { wkt = srids[1]; }
+		var match = {{ map_var }}.re.exec(wkt);
+		if (match){wkt = match[1];}
+		var wkt = {{ map_var }}.wkt_f.read(wkt);
+		wkt = new OpenLayers.Feature.Vector(wkt.geometry.transform(new OpenLayers.Projection('EPSG:{{ srid }}'), {{ map_var }}.viewer.map.getProjection()));
+		return wkt;
+	}
+
+	{{ map_var }}.write_wkt = function(feat){
+		if ({{ map_var }}.is_collection){ {{ map_var }}.num_geom = feat.geometry.components.length;}
+		else { {{ map_var }}.num_geom = 1;}
+		var feat2 = feat.clone();
+		var feat_epsg = new OpenLayers.Feature.Vector(feat2.geometry.transform({{ map_var }}.viewer.map.getProjection(), new OpenLayers.Projection('EPSG:{{ srid }}')));
+		document.getElementById('{{ map_var }}').value = {{ map_var }}.get_ewkt(feat_epsg);
+	}
+
+	{{ map_var }}.add_wkt = function(event){
+		if ({{ map_var }}.is_collection){
+			var feat = new OpenLayers.Feature.Vector(new OpenLayers.Geometry.{{ collection_type }}());
+			for (var i = 0; i < {{ map_var }}.layers.vector.features.length; i++){
+				feat.geometry.addComponents([{{ map_var }}.layers.vector.features[i].geometry]);
+			}
+			{{ map_var }}.write_wkt(feat);
+		} else {
+			if ({{ map_var }}.layers.vector.features.length > 1){
+				old_feats = [{{ map_var }}.layers.vector.features[0]];
+				{{ map_var }}.layers.vector.removeFeatures(old_feats);
+				{{ map_var }}.layers.vector.destroyFeatures(old_feats);
+			}
+			{{ map_var }}.write_wkt(event.feature);
+		}
+	}
+
+	{{ map_var }}.modify_wkt = function(event){
+		if ({{ map_var }}.is_collection){
+			if ({{ map_var }}.is_point){
+				{{ map_var }}.add_wkt(event);
+				return;
+			} else {
+				var feat = new OpenLayers.Feature.Vector(new OpenLayers.Geometry.{{ collection_type }}());
+				for (var i = 0; i < {{ map_var }}.num_geom; i++){
+					feat.geometry.addComponents([{{ map_var }}.layers.vector.features[i].geometry]);
+				}
+				{{ map_var }}.write_wkt(feat);
+			}
+		} else {
+			{{ map_var }}.write_wkt(event.feature);
+		}
+	}
+
+	{{ map_var }}.deleteFeatures = function(){
+		{{ map_var }}.layers.vector.removeFeatures({{ map_var }}.layers.vector.features);
+		{{ map_var }}.layers.vector.destroyFeatures();
+	}
+
+	{{ map_var }}.clearFeatures = function (){
+		{{ map_var }}.deleteFeatures();
+		document.getElementById('{{ map_var }}').value = '';
+		var center = new OpenLayers.LonLat({{ default_lon }}, {{ default_lat }});
+		center = center.transform(new OpenLayers.Projection('EPSG:{{ srid }}'), {{ map_var }}.viewer.map.getProjection());
+		{{ map_var }}.viewer.map.setCenter(center, {{ default_zoom }});
+	}
+
+	{{ map_var }}.addSelectControl = function(){
+		var select = new OpenLayers.Control.SelectFeature({{ map_var }}.layers.vector, {'toggle' : true, 'clickout' : true});
+		{{ map_var }}.viewer.map.addControl(select);
+		select.activate();
+	}
+
+	{{ map_var }}.enableDrawing = function(){ {{ map_var }}.viewer.map.getControlsByClass('OpenLayers.Control.DrawFeature')[0].activate();}
+
+	{{ map_var }}.enableEditing = function(){ {{ map_var }}.viewer.map.getControlsByClass('OpenLayers.Control.ModifyFeature')[0].activate();}
+
+	{{ map_var }}.getControls = function(lyr){
+		{{ map_var }}.panel = new OpenLayers.Control.Panel({'displayClass': 'olControlEditingToolbar'});
+		var nav = new OpenLayers.Control.Navigation();
+		var draw_ctl;
+		if ({{ map_var }}.is_linestring){
+			draw_ctl = new OpenLayers.Control.DrawFeature(lyr, OpenLayers.Handler.Path, {'displayClass': 'olControlDrawFeaturePath'});
+		} else if ({{ map_var }}.is_polygon){
+			draw_ctl = new OpenLayers.Control.DrawFeature(lyr, OpenLayers.Handler.Polygon, {'displayClass': 'olControlDrawFeaturePolygon'});
+		} else if ({{ map_var }}.is_point){
+			draw_ctl = new OpenLayers.Control.DrawFeature(lyr, OpenLayers.Handler.Point, {'displayClass': 'olControlDrawFeaturePoint'});
+		}
+		var mod = new OpenLayers.Control.ModifyFeature(lyr, {'displayClass': 'olControlModifyFeature'});
+		var drag = new OpenLayers.Control.DragFeature(lyr, {'displayClass': 'olControlDragFeature'});
+		{{ map_var }}.controls = [nav, draw_ctl, mod, drag];
+	}
+
+	{{ map_var }}.load = function(div_id, mode, territory, crs, dispcrs, proxy){
+		var options = new Object();
+		if (mode) options.mode = mode;
+		if (territory) options.territory = territory;
+		if (crs) options.projection = crs;
+		if (dispcrs) options.displayProjection = dispcrs;
+		if (proxy) options.proxy = proxy;
+		options.nameInstance = '{{ map_var }}';
+		options.apiKey = '{{ api_key }}';
+		options[options.apiKey] = {
+			tokenServer:{url:'http://jeton-api.ign.fr',ttl:600},
+			tokenTimeOut:600,
+			bounds: [-180.0,-90.0,180.0,90.0],
+			allowedGeoportalLayers:[],
+			resources:{}
+		};
+		{% for layer in layers %}
+		options[options.apiKey].allowedGeoportalLayers.push('{{ layer.name }}');
+		options[options.apiKey].resources['{{ layer.name }}'] = {name:'{{ layer.resource_name }}',type:'WMSC',url:'{{ wms_url }}'};
+		{% endfor %}
+		{{ map_var }}.viewer = new Geoportal.Viewer.Default(div_id, options);
+	}
+
+	{{ map_var }}.init = function(){
+		if ({{ map_var }}.viewer != null) { return; }
+		{{ map_var }}.load("{{ map_var }}_map", "mini");
+		{% for layer in layers %}
+		{{ map_var }}.viewer.addGeoportalLayer('{{ layer.name }}', {opacity: {{ layer.opacity }}, name: '{{ layer.switcher_name }}', buffer: 1});
+		{% endfor %}
+		var styleMap = new OpenLayers.StyleMap(OpenLayers.Util.applyDefaults({
+				fillColor: "#{{ color }}",
+				fillOpacity: {{ opacity }},
+				{% if is_linestring %}strokeWidth: 3,{% endif %}
+				strokeColor: '#{{ color }}'},
+			OpenLayers.Feature.Vector.style["default"]))
+		{{ map_var }}.layers.vector = new OpenLayers.Layer.Vector("{{ field_name }}", {styleMap: styleMap});
+		{{ map_var }}.viewer.map.addLayer({{ map_var }}.layers.vector);
+
+		var wkt = document.getElementById('{{ map_var }}').value;
+		if (wkt) {
+			var geom = {{ map_var }}.read_wkt(wkt);
+			{{ map_var }}.write_wkt(geom);
+			if ({{ map_var }}.is_collection){
+				for (var i = 0; i < {{ map_var }}.num_geom; i++){
+					{{ map_var }}.layers.vector.addFeatures([new OpenLayers.Feature.Vector(geom.geometry.components[i].clone())]);
+				}
+			} else {
+				{{ map_var }}.layers.vector.addFeatures([geom]);
+			}
+			// Yes, call it 3 times and it eventually works!
+			{{ map_var }}.viewer.map.zoomToExtent(geom.geometry.getBounds());
+			{{ map_var }}.viewer.map.zoomToExtent(geom.geometry.getBounds());
+			{{ map_var }}.viewer.map.zoomToExtent(geom.geometry.getBounds());
+			if ({{ map_var }}.is_point){
+				{{ map_var }}.viewer.map.zoomTo({{ point_zoom }});
+			}
+		} else {
+			var center = new OpenLayers.LonLat({{ default_lon }}, {{ default_lat }});
+			center = center.transform(new OpenLayers.Projection('EPSG:{{ srid }}'), {{ map_var }}.viewer.map.getProjection());
+			{{ map_var }}.viewer.map.setCenter(center, {{ default_zoom }});
+		}
+
+		{{ map_var }}.layers.vector.events.on({"featuremodified" : {{ map_var }}.modify_wkt});
+		{{ map_var }}.layers.vector.events.on({"featureadded" : {{ map_var }}.add_wkt});
+		{{ map_var }}.getControls({{ map_var }}.layers.vector);
+		{{ map_var }}.panel.addControls({{ map_var }}.controls);
+		{{ map_var }}.viewer.map.addControl({{ map_var }}.panel);
+		{{ map_var }}.addSelectControl();
+
+		{{ map_var }}.viewer.map.addControl(new OpenLayers.Control.PanZoomBar());
+		if (wkt) {
+			{{ map_var }}.enableEditing();
+		} else {
+			{{ map_var }}.enableDrawing();
+		}
+	};
+</script>
+
+<a href="javascript:{{ map_var }}.clearFeatures()">Delete all Features</a>
+
+<textarea id="{{ map_var }}" class="vWKTField required" cols="150" rows="10" name="{{ map_var }}" style="display:none;">{{ wkt }}</textarea>
+
+<script type="text/javascript">
+	{{ map_var }}.init();
+</script>
+
+<style type="text/css">
+	.gpMainMapCell, .gpMainMap { border: none; }
+	.olControlEditingToolbar .olControlModifyFeatureItemActive {
+		background-image: url("{{ admin_media_url }}img/gis/move_vertex_on.png");
+		background-repeat: no-repeat;
+	}
+	.olControlEditingToolbar .olControlModifyFeatureItemInactive {
+		background-image: url("{{ admin_media_url }}img/gis/move_vertex_off.png");
+		background-repeat: no-repeat;
+	}
+</style>
